ZipFile extraction works

--- a/blip/blip.ipynb
+++ b/blip/blip.ipynb
@@ -2,27 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\archi\\anaconda3\\envs\\asid\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\archi\\anaconda3\\envs\\asid\\lib\\site-packages\\torchvision\\datapoints\\__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
-      "c:\\Users\\archi\\anaconda3\\envs\\asid\\lib\\site-packages\\torchvision\\transforms\\v2\\__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import requests\n",
     "from transformers import BlipProcessor, BlipForConditionalGeneration \n",
-    "import gradio as gr"
+    "import gradio as gr\n",
+    "import zipfile\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\archi\\\\ecdna-analysis\\\\data\\\\ecSeg_dataset.zip'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Zipfile path containing data\n",
+    "zipfile_path = os.path.expanduser(\"~\") + '\\\\ecdna-analysis\\\\data\\\\ecSeg_dataset.zip'\n",
+    "zipfile_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Images extracted to: test_im_images\n"
+     ]
+    }
+   ],
+   "source": [
+    "zip_file_path = 'C:\\\\Users\\\\archi\\\\ecdna-analysis\\\\data\\\\ecSeg_dataset.zip'\n",
+    "\n",
+    "# Folder inside the ZIP file that contains the images\n",
+    "folder_name = 'test_im/'\n",
+    "\n",
+    "# Image extensions you want to extract\n",
+    "image_extensions = ('.jpg', '.jpeg', '.png', '.tif', '.bmp')\n",
+    "\n",
+    "# Open the ZIP file\n",
+    "with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "    all_files = zip_ref.namelist()\n",
+    "    image_files = [f for f in all_files if f.find(folder_name) != -1]\n",
+    "    extract_folder = 'test_im_images'\n",
+    "    os.makedirs(extract_folder, exist_ok=True)\n",
+    "    for image_file in image_files:\n",
+    "        zip_ref.extract(image_file, extract_folder)\n",
+    "\n",
+    "    print(f\"Images extracted to: {extract_folder}\")\n",
+    "    \n",
+    "zip_ref.close()"
    ]
   },
   {
@@ -31,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define processor and model\n",
     "processor = BlipProcessor.from_pretrained(\"Salesforce/blip-image-captioning-large\")\n",
     "model = BlipForConditionalGeneration.from_pretrained(\"Salesforce/blip-image-captioning-large\", low_cpu_mem_usage=True)"
    ]
