add dataset and testing file

--- a/minicpm/openbmb.ipynb
+++ b/minicpm/openbmb.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0f29b11c-ed34-4e91-8813-40e4c6375c49",
    "metadata": {},
    "outputs": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "49c2ad43-6250-44a6-96e8-75bfc99be187",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87b7588bdb1f4ea89ef946df3d482077",
+       "model_id": "3a71c4aed29043e191cc5b403e04c12c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,6 +58,48 @@
    "source": [
     "model = AutoModel.from_pretrained('openbmb/MiniCPM-V-2', trust_remote_code=True, torch_dtype=torch.bfloat16)\n",
     "model = model.to(device='cuda', dtype=torch.bfloat16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9837f5f4-80a6-49ca-b444-aedfe588d03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The `seen_tokens` attribute is deprecated and will be removed in v4.41. Use the `cache_position` model input instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image you've shared appears to be a close-up of cells stained with blue and red fluorescent dyes. The background is dark, emphasizing the brightly colored structures within each cell. Each individual structure in this cluster resembles an organelle or cellular component that might typically appear as such under fluorescence microscopy due to their unique coloration patterns. \n",
+      "Please note that without additional context like labels on different parts of these objects it becomes challenging for me to provide more specific details about what exactly they are representing based solely off visual information provided here\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained('openbmb/MiniCPM-V-2', trust_remote_code=True)\n",
+    "model.eval()\n",
+    "\n",
+    "image = Image.open('../../test3.png').convert('RGB')\n",
+    "\n",
+    "question = 'Identify the image.'\n",
+    "msgs = [{'role': 'user', 'content': question}]\n",
+    "\n",
+    "res, context, _ = model.chat(\n",
+    "    image=image,\n",
+    "    msgs=msgs,\n",
+    "    context=None,\n",
+    "    tokenizer=tokenizer,\n",
+    "    sampling=True,\n",
+    "    temperature=0.7\n",
+    ")\n",
+    "print(res)"
    ]
   },
   {
