--- a/pixtral/pixtral.ipynb
+++ b/pixtral/pixtral.ipynb
@@ -113,40 +113,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "To analyze this metaphase image for possible extrachromosomal DNA (ecDNA), we need to focus on the structures that do not appear to be part of the regular chromosomes. Here are the steps involved in identifying potential ecDNA:\n",
-      "\n",
-      "1. **Identify Chromosomal DNA**: The chromosomal DNA in this image is stained blue, which is characteristic of DAPI (4',6-diamidino-2-phenylindole) staining, a common method used to stain DNA in cells.\n",
-      "\n",
-      "2. **Observe Structures Outside the Chromosomes**: ecDNA typically appears as small circular or irregularly shaped structures that are separate from the main chromosomes. Look for areas of blue staining that are distinct from the larger, more condensed chromosomes.\n",
-      "\n",
-      "3. **Consider Additional Stains**: If the image includes other stains (e.g., red staining that might indicate specific proteins or DNA sequences associated with ecDNA), these can help confirm the presence of ecDNA. In this image, there are some red spots, which might indicate regions of ecDNA if they are separate from the chromosomes.\n",
-      "\n",
-      "4. **Check for Size and Shape**: ecDNA is generally smaller and more circular or irregularly shaped compared to chromosomal DNA.\n",
-      "\n",
-      "5. **Count and Document**: Make note of any potential ecDNA structures, their numbers, and their locations relative to the chromosomes. This information can be used for further analysis.\n",
-      "\n",
-      "Based on the image provided:\n",
-      "\n",
-      "- The blue-stained areas likely represent the chromosomal DNA.\n",
-      "- The red spots could be ecDNA, especially if they appear separate from the main chromosomal structures.\n",
-      "\n",
-      "**Analysis**:\n",
-      "- There are multiple red spots in the image that are distinct from the blue-stained chromosomal DNA. These red spots could potentially represent ecDNA or other cellular components stained with a different dye.\n",
-      "- The red spots are small and appear to be isolated from the larger chromosomal structures, which is consistent with the characteristics of ecDNA.\n",
-      "\n",
-      "**Conclusion**:\n",
-      "The red spots in this metaphase image are likely candidates for ecDNA, given their distinct appearance and separation from the main chromosomal DNA. Further confirmation would typically require additional experimental techniques, such as fluorescence in situ hybridization (FISH) or sequencing, to definitively identify these structures as ecDNA.\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Setup Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "api_key = \"jPj7kLzhpj8aicxtA9cpyDg1uP50zvtW\"\n",
     "\n",
@@ -159,8 +136,53 @@
     "# Getting the base64 string\n",
     "base64_image = encode_image(image_path)\n",
     "\n",
-    "client = Mistral(api_key=api_key)\n",
-    "\n",
+    "client = Mistral(api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyze metaphase images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To analyze this metaphase image for possible extrachromosomal DNA (ecDNA), we need to carefully examine the chromosomal structure and look for any anomalies that might suggest the presence of ecDNA. Here are the steps you can follow:\n",
+      "\n",
+      "1. **Identify the Chromosomes**: The image shows chromosomes stained in blue with some scattered red spots. These chromosomes are likely stained with DAPI (blue) to highlight the DNA, and the red spots might indicate specific markers or probes associated with ecDNA.\n",
+      "\n",
+      "2. **Look for ecDNA Indicators**:\n",
+      "    - **Size and Shape**: ecDNA molecules are typically smaller and more circular compared to the linear structure of chromosomes.\n",
+      "    - **Location**: ecDNA can be found outside the main chromosomal bodies and may appear as distinct, smaller spots.\n",
+      "    - **Staining Intensity**: ecDNA may show different staining intensity compared to chromosomal DNA, especially if specific probes are used to label them.\n",
+      "\n",
+      "3. **Analyze the Red Spots**:\n",
+      "    - The red spots in the image could be indicative of ecDNA if they are distinct and separate from the blue-stained chromosomes.\n",
+      "    - Check if these red spots are isolated and not part of the chromosomal structure.\n",
+      "\n",
+      "4. **Quantification**:\n",
+      "    - Count the number of red spots and compare it to the number of chromosomes.\n",
+      "    - Determine if the red spots are consistently present in multiple metaphase images.\n",
+      "\n",
+      "From the image provided, it seems there are several red spots that are distinct from the blue-stained chromosomes. These could potentially be ecDNA molecules. To confirm, you would need to:\n",
+      "\n",
+      "- **Use Specific Probes**: Employ probes that specifically bind to ecDNA sequences to verify their presence.\n",
+      "- **Compare with Controls**: Compare this image with control images that do not contain ecDNA to ensure the red spots are not artifacts.\n",
+      "- **Replicate Experiments**: Repeat the experiment multiple times to ensure consistency and reliability of the findings.\n",
+      "\n",
+      "Given the visual data, it appears likely that the red spots represent ecDNA, but further molecular techniques and controls are necessary to confirm this hypothesis.\n"
+     ]
+    }
+   ],
+   "source": [
     "# Define the messages for the chat\n",
     "messages = [\n",
     "    {\n",
@@ -169,6 +191,120 @@
     "            {\n",
     "                \"type\": \"text\",\n",
     "                \"text\": \"For this task, act as a bioligist who is studying extrachromosomal DNA (ecDNA). Consider this metaphase image containing ecDNA. Analyze it for possible ecDNA.\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"type\": \"image_url\",\n",
+    "                \"image_url\": f\"data:image/jpeg;base64,{base64_image}\" \n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Get the chat response\n",
+    "chat_response = client.chat.complete(\n",
+    "    model=model,\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "# Print the content of the response\n",
+    "print(chat_response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count number of chromosomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To count the number of chromosomes in this metaphase image, we need to carefully identify the individual chromosomes which appear as blue-stained structures. The image also contains ecDNA, which is marked in red, and potentially other elements marked in green.\n",
+      "\n",
+      "Here’s how to proceed:\n",
+      "\n",
+      "1. **Identify Chromosomes**: Look for the blue-stained structures that are distinct and separate from each other. These are the chromosomes.\n",
+      "2. **Exclude Non-Chromosomal Elements**: Ensure that red-stained ecDNA and green-stained elements are not counted as chromosomes.\n",
+      "\n",
+      "Based on the image:\n",
+      "\n",
+      "- There are 11 distinct blue-stained structures that can be identified as chromosomes. \n",
+      "\n",
+      "So, the total number of chromosomes present in the image is **11**.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path to your image\n",
+    "image_path = \"data/converted/2314.jpg\"\n",
+    "\n",
+    "# Getting the base64 string\n",
+    "base64_image = encode_image(image_path)\n",
+    "\n",
+    "# Define the messages for the chat\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": \"For this task, act as a bioligist who is studying extrachromosomal DNA (ecDNA). Consider this metaphase image containing ecDNA. Count how many chromosomes are present in the image.\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"type\": \"image_url\",\n",
+    "                \"image_url\": f\"data:image/jpeg;base64,{base64_image}\" \n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Get the chat response\n",
+    "chat_response = client.chat.complete(\n",
+    "    model=model,\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "# Print the content of the response\n",
+    "print(chat_response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As a biologist studying extrachromosomal DNA (ecDNA), I can examine the image and observe that there are several nuclei present. To count them, I will look for the distinct blue-stained regions, which typically represent the nuclei of the cells.\n",
+      "\n",
+      "Upon careful examination of the image, I can see four distinct blue-stained regions, each representing a nucleus. Therefore, there are four nuclei present in the image.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path to your image\n",
+    "image_path = \"data/converted/19.jpg\"\n",
+    "\n",
+    "# Getting the base64 string\n",
+    "base64_image = encode_image(image_path)\n",
+    "\n",
+    "# Define the messages for the chat\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": \"For this task, act as a bioligist who is studying extrachromosomal DNA (ecDNA). Consider this metaphase image containing ecDNA. Count how many nuclei are present in the image.\"\n",
     "            },\n",
     "            {\n",
     "                \"type\": \"image_url\",\n",
